FIX: Removing horizontal scrollbar in category modal

--- a/app/assets/stylesheets/common/base/tagging.scss
+++ b/app/assets/stylesheets/common/base/tagging.scss
@@ -200,6 +200,7 @@ header .discourse-tag {color: $tag-color }
 
 .tag-chooser {
   width: 100%;
+  max-width: 100%;
   margin: 5px 0;
   ul.select2-choices {
     max-height: 30px;
