--- a/app/assets/stylesheets/mobile/modal.scss
+++ b/app/assets/stylesheets/mobile/modal.scss
@@ -116,6 +116,7 @@
 
 .edit-category-modal {
   .modal-body {
+    box-sizing: border-box;
     position: relative;
     height: 350px;
   }
